--- a/public/home.html
+++ b/public/home.html
@@ -12,7 +12,7 @@
 
 <body>
     <div id="root"></div>
-    <script src="/bundle_home.js"></script>
+    <script src="dist/bundle_home.js"></script>
 </body>
 
 </html>
